# filesystem

./: CMakeLists.txt
include/filesystem/defines/export/: export.h
include/filesystem/defines/handle/: opaque_handle.h
include/filesystem/export/file/: file.h  file_aio.h
include/filesystem/export/interface/: io_request.h
include/filesystem/export/interface/file/: file.h
include/filesystem/export/io_request/: io_request.h
include/filesystem/file/: file_init.h  file_manip.h
include/filesystem/file/aio/: file_aio_init.h  file_aio_manip.h
include/filesystem/file/details/: fs_file_init.h  fs_file_manip.h  fs_file_type.h
include/filesystem/file/details/aio/: fs_file_aio_init.h  fs_file_aio_manip.h
include/filesystem/interface/: io_request.h
include/filesystem/interface/file/: file.h
include/filesystem/io_request/: io_request_init.h  io_request_manip.h
include/filesystem/io_request/details/: fs_ioreq_init.h  fs_ioreq_manip.h  fs_ioreq_type.h
source/lib/: CMakeLists.txt
source/lib/file/: file_init.c  file_manip.c
source/lib/file/aio/: file_aio_init.c  file_aio_manip.c
source/lib/file/details/: fs_file_init.c  fs_file_manip.c
source/lib/file/details/aio/: fs_file_aio_init.c  fs_file_aio_manip.c
source/lib/io_request/: io_request_init.c  io_request_manip.c
source/lib/io_request/details/: fs_ioreq_init.c  fs_ioreq_manip.c
source/shared_lib/: CMakeLists.txt  init.c
source/shared_lib/file/: file.c  file_aio.c
source/shared_lib/io_request/: io_request.c
